--- a/blur/index.html
+++ b/blur/index.html
@@ -4,10 +4,15 @@
   <title>Motion blur! By Dennis Hotson</title>
   <!-- palette credit http://www.colourlovers.com/palette/2865203/googlyish -->
 <style>
-body {
+canvas {
+  margin: 0;
+  padding: 0;
+}
+body, html {
   margin: 0;
   padding: 0;
   background: #222;
+  overflow: hidden;
 }
 </style>
 </head>
