--- a/squircle/index.html
+++ b/squircle/index.html
@@ -2,37 +2,42 @@
 <head><title>Squircle</title></head>
 <body>
 <form>
-<input id="size" type="range" min="0" value="4" max="40" step="0.5" />
+  <input id="size" type="range" min="-3" value="2" max="7" step="0.00001" /><i>n=<span id="n"></span></i>
 </form>
-<canvas id="canvas" width="500" height="500" />
+<canvas id="canvas" width="500" height="500" style="width: 500px; height: 500px"/>
 
 <script>
 var canvas = document.getElementById('canvas');
 var ctx = canvas.getContext('2d');
 
-var a = 240;
-var b = 240;
-var n = 4;
+var w = (canvas.width *= window.devicePixelRatio);
+var h = (canvas.height *= window.devicePixelRatio);
 
+var a = w/2 - 2;
+var b = h/2 - 2;
+var n = 4;
 
 var sizer = document.getElementById('size');
 sizer.oninput = function() {
-  n = 2 + Math.pow(sizer.value / 10, 4)
+  n = Math.pow(2, sizer.value)
   draw();
 }
 
+ctx.fillStyle='#aaa';
+ctx.lineWidth = window.devicePixelRatio;
+
 function draw() {
-  ctx.clearRect(0, 0, 500, 500);
+  document.getElementById('n').innerText = n.toFixed(2);
+  ctx.clearRect(0, 0, w, h);
   ctx.beginPath();
-  ctx.moveTo(250 + 240,250);
   for (var i=0; i<=100; i++) {
     var t = 2*Math.PI * (i/100)
     var x = Math.pow(Math.abs(Math.cos(t)), 2/n) * a * Math.sign(Math.cos(t))
     var y = Math.pow(Math.abs(Math.sin(t)), 2/n) * b * Math.sign(Math.sin(t))
 
-    ctx.lineTo(x+250,y+250);
+    ctx.lineTo(x+w/2,y+h/2);
   }
-  ctx.lineTo(250 + 240, 250);
+  ctx.closePath();
   ctx.stroke();
 }
 
