Better legibility on mobile

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ html, body, p { margin: 0; padding: 0; }
 html {
   background: #BBB;
   text-align: center;
-  background-image: -webkit-linear-gradient(#999, #ccc);
-  background-image: linear-gradient(#999, #ccc);
+  background-image: -webkit-linear-gradient(#999, #bbb);
+  background-image: linear-gradient(#999, #bbb);
   min-height: 100%;
 }
 
