--- a/$$$/index.html
+++ b/$$$/index.html
@@ -1,3 +1,3 @@
 <html>
-<body style="text-align: center">
+<body style="text-align: center; margin: 0; padding: 0;">
 <img src="../money.svg" height="100%">
