Add emaill address

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@ a:hover {
   <p><span class="left">tumblelog</span> <a href="http://dhotson.tumblr.com">antipodean</a></p>
   <p><span class="left">code</span> <a href="http://github.com/dhotson">github</a></p>
   <p><span class="left">occasionally</span> <a href="http://twitter.com/dennishotson">tweet</a></p>
+  <p><span class="left">email</span> <a href="mailto:dennis.hotson@gmail.com">dennis.hotson@gmail.com</a></p>
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
