Open graph tags

--- a/picklecat/index.html
+++ b/picklecat/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
 <title>Pickle cat</title>
+<meta property="og:title" content="Pickle cat" />
+<meta property="og:image" content="shot.png" />
 <script src = "pixi.min.js"></script>
 <style>
 body {
