Smaller og image

--- a/picklecat/index.html
+++ b/picklecat/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Pickle cat</title>
 <meta property="og:title" content="Pickle cat" />
-<meta property="og:image" content="shot.png" />
+<meta property="og:image" content="shot.jpg" />
 <script src = "pixi.min.js"></script>
 <style>
 body {
