--- a/picklecat/index.html
+++ b/picklecat/index.html
@@ -3,6 +3,8 @@
 <title>Pickle cat</title>
 <meta property="og:title" content="Pickle cat" />
 <meta property="og:image" content="http://dn.ht/picklecat/shot.jpg" />
+<meta property="og:url" content="http://dn.ht/picklecat/" />
+<meta property="og:type" content="website" />
 <script src = "pixi.min.js"></script>
 <style>
 body {
