--- a/picklecat/index.html
+++ b/picklecat/index.html
@@ -81,6 +81,21 @@ PIXI.loader.add('cat', 'mesmercat.png').load(function (loader, resources) {
   foreground.addChild(cat);
 });
 
+
+var mousex = w/2, mousey = h/2;
+PIXI.loader.add('catdisplacement', 'mesmercatdisplacement.png').load(function (loader, resources) {
+  catd = new PIXI.Sprite(resources.catdisplacement.texture);
+  catf = new PIXI.filters.DisplacementFilter(catd, 0);
+  cat.filters = [catf];
+  cat.addChild(catd)
+
+  window.onmousemove = function(e) {
+    mousex = e.clientX;
+    mousey = e.clientY;
+  };
+});
+
+
 var f3;
 PIXI.loader.add('displacement', 'clouds.jpg').load(function (loader, resources) {
   d1 = new PIXI.Sprite(resources.displacement.texture);
@@ -106,7 +121,7 @@ PIXI.loader.add('displacement', 'clouds.jpg').load(function (loader, resources) 
 });
 
 var brightness = new PIXI.filters.ColorMatrixFilter();
-brightness.brightness(0.85, 1);
+brightness.brightness(0.8, 1);
 var bloom = new PIXI.filters.BloomFilter();
 stage.filters = [brightness, bloom];
 
@@ -129,6 +144,9 @@ function animate() {
     pickles[i].position.y = 100 * Math.sin(i + d / 5000) + 150;
     pickles[i].rotation = Math.sign(i-1.5) * d / (2500 + 300 * i);
   }
+
+  catf.scale.x = (w/2 - mousex) / 80 + 5 * Math.sin(d/1000);
+  catf.scale.y = (h/2 - mousey) / 80 + 5 * Math.cos(d/1000);
 
   renderer.render(stage);
 }
