--- a/picklecat/index.html
+++ b/picklecat/index.html
@@ -23,7 +23,7 @@ iframe {
 </style>
 </head>
 <body>
-<iframe src="https://www.youtube.com/embed/UsMewmMTA_c?autoplay=1"></iframe>
+<iframe src="https://www.youtube.com/embed/UsMewmMTA_c?autoplay=1&loop=1&playlist=UsMewmMTA_c"></iframe>
 <script>
 
 w = 1024, h = 768;
